xfstk-dldr-linux-source-1.6.0.tar.gz
Signed-off-by: Sergio Aguirre <sergio.a.aguirre@gmail.com>

--- a/xfstk-sources/installer/linux/xfstk-downloader-0.0.0/debian/changelog
+++ b/xfstk-sources/installer/linux/xfstk-downloader-0.0.0/debian/changelog
@@ -1,3 +1,10 @@
+xfstk-downloader (1.6.0)
+
+  * [Bug fix] BZ192533 - DNX support to read eMMC contents
+  * [New Feature] - eMMC Feature for MERR/MOFD
+
+  -- Intel Corporation <xfstk@intel.com>  Fri, 27 Jun 2014 08:00:00 -0700
+
 xfstk-downloader (1.5.6) unstable; urgency=low
 
   * [Bug fix] BZ163978 - XFSTK reports failure during CSDB update
